--- a/src/implementation/objects/index.org
+++ b/src/implementation/objects/index.org
@@ -9,12 +9,15 @@
 
 
 * Initialization
-
+  
 ** Imports for Python API
 #+BEGIN_SRC python :tangle ../../src/obj.py :eval no
 # -*- coding: utf-8 -*-
 from op_exceptions import AttributeRequired
+from op_exceptions import ConstraintError
+from op_exceptions import NotAuthorizedError
 from utils import *
+
 #+END_SRC
 
 
@@ -28,7 +31,8 @@ from datetime import datetime
 
 from src.obj import *
 from src.op_exceptions import AttributeRequired
-
+from src.op_exceptions import ConstraintError
+from src.op_exceptions import NotAuthorizedError
 #+END_SRC
 
 
@@ -76,8 +80,32 @@ class AttributeRequired(Exception):
 
 #+END_SRC
 
+*** ConstraintError
+
+#+BEGIN_SRC python :tangle ../../src/op_exceptions.py :eval no
+class ConstraintError(Exception):
+    str = None
+    
+    def __init__(self, str):
+        self.str = str
+
+    def __str__(self):
+        return repr(self.str)
+#+END_SRC
 
 
+*** NotAuthorizedError
+    
+#+BEGIN_SRC python :tangle ../../src/op_exceptions.py :eval no
+class NotAuthorizedError(Exception):
+    str = None
+    
+    def __init__(self, str):
+        self.str = str
+
+    def __str__(self):
+        return repr(self.str)
+#+END_SRC
 
 ** Utility Functions
 
@@ -198,12 +226,12 @@ class User():
     email = None
     role = None
     name = None
-    
+    session = None
 #+END_SRC
 
 
 *** Constructor
-
+    
 **** Implementation
 
     Signature of the constructor of =User= is as follows:
@@ -227,8 +255,11 @@ class User():
         self.set_email(kwargs['email'])
         self.set_name(kwargs['name'])
         self.set_role(kwargs['role'])
+        
+        #session = Session(self)
 
-        User.users.append(self)
+        #add(user,session)
+
 #+END_SRC
 
 
@@ -236,6 +267,12 @@ class User():
  #+BEGIN_SRC python :tangle ../../tests/test_obj.py :eval no
 class TestUser(TestCase):
     TESTING = True
+
+    def setUp(self):
+        setUp()
+
+    def tearDown(self):
+        tearDown()
 
     def test_user_creation_without_role(self):
         print "test_user_creation_without_role"
@@ -255,6 +292,30 @@ class TestUser(TestCase):
 
 *** Functions
 
+**** addUser 
+***** Implementation
+
+#+BEGIN_SRC python :tangle ../../src/obj.py :eval no
+    def add(user,session):
+        if session.user.role.name is not 'admin':
+            raise NotAuthorizedError("Only a user with admin can add")
+        else:
+            existing_users=filter(lambda x: x.email == user.email, User.users)
+            if not existing_users:
+                User.users.append(user)
+            else:
+                raise ConstraintError("User already exists in the system")
+#+END_SRC
+
+***** Test
+#+BEGIN_SRC python :tangle ../../tests/test_obj.py :eval no
+    def test_user_duplicate_add(self):
+        print"test_user_duplicate_add"
+        user=User(name = Name("abc"),email = Email("abc@gmail.com"), role =
+        Role(name=Name("admin")))
+        with self.assertRaises(ConstraintError):
+            User.add(user,Session(user=user))
+#+END_SRC
 **** setEmail
 ***** Implementation
 #+BEGIN_SRC python :tangle ../../src/obj.py :eval no
@@ -509,7 +570,7 @@ class TestRole(TestCase):
 
 ***** Test getAll: Nil --> set[Role]
  #+BEGIN_SRC python :tangle ../../tests/test_obj.py :eval no
-    def test_set_name_of_user(self):
+    def test_get_all(self):
         print"test_set_name_of_user"
         user = User(name=Name("abc"), email = Email("abc@gmail.com"),
         role=Role(name=Name("admin")))
@@ -520,7 +581,7 @@ class TestRole(TestCase):
 #+END_SRC
 
 
- 
+
 **** to_client
 ***** Implementation
 #+BEGIN_SRC python :tangle ../../src/obj.py :eval no
@@ -528,12 +589,138 @@ class TestRole(TestCase):
         print "fill"
 #+END_SRC
 
+
+** Session
+
+*** Definition
+#+BEGIN_SRC python :tangle ../../src/obj.py :eval no
+class Session(object):
+    user = None
+    sessions = []
+#+End_SRC
+
+*** Constructor
+**** Implementation
+#+BEGIN_SRC python :tangle ../../src/obj.py :eval no
+    def __init__(self, user):
+        self.user = user
+        Session.sessions.append(self)
+#+END_SRC
+
+*** Test constructor
+#+BEGIN_SRC python :tangle ../../tests/test_obj.py :eval no
+class TestSession(TestCase):
+    
+    TESTING = True
+        
+    def setUp(self):
+        setUp()
+
+    def tearDown(self):
+        setUp()
+
+    def test_session_creation(self):
+        print "test_session_creation"
+        user = User(name = Name("ghi"), email = Email("ghi@gmail.com"),
+        role = Role(name = Name("admin")))
+        new_sessions = Session.get_all_sessions()
+        User.add(user,Session(user = user))
+        new_sessions1 = Session.get_all_sessions()
+        self.assertEqual( len(new_sessions), len(new_sessions1)  )
+
+#+END_SRC
+
+*** Operations
+
+**** getAllSessions
+
+***** Implementation
+#+BEGIN_SRC python :tangle ../../src/obj.py :eval no
+    @staticmethod
+    def get_all_sessions():
+        return Session.sessions
+#+END_SRC
+
+**** deleteSession
+***** Implementation 
+
+#+BEGIN_SRC python :tangle ../../src/obj.py :eval no
+    @staticmethod
+    def delete_session(user):
+        sessions = filter(lambda session:user.email != session.user.email,
+        Session.sessions)
+        Session.sessions = sessions
+#+END_SRC
+
+***** Test
+#+BEGIN_SRC python :tangle ../../tests/test_obj.py :eval no
+    def test_delete_session(self):
+        print"test_delete_session"
+        user = User(name=Name("def"), email = Email("abc1@gmail.com"),
+        role=Role(name=Name("admin")))
+        User.add(user,Session(user = user))
+        new_sessions = Session.get_all_sessions()
+        Session.delete_session(user)
+        self.assertEqual( len(Session.sessions)+1, len(new_sessions))
+
+#+END_SRC
+
+**** getUserEmail
+
+***** Implementation
+#+BEGIN_SRC python :tangle ../../src/obj.py :eval no
+    @staticmethod
+    def get_user(user):
+        return user.email
+#+END_SRC
+
+***** Test
+#+BEGIN_SRC python :tangle ../../tests/test_obj.py :eval no
+    def test_get_email_of_user(self):
+        print "test_get_email_of_user"
+        user = User(name=Name("def"), email = Email("def@gmail.com"),
+        role=Role(name=Name("admin")))
+        User.add(user,Session(user = user))
+        new_email = Session.get_user(user)
+        self.assertEqual(new_email, "def@gmail.com")
+
+#+END_SRC
+
+**** toClient
+***** Implementation
+#+BEGIN_SRC python :tangle ../../src/obj.py :eval no
+    def to_client(self):
+        return {
+            'session': self.user.to_client()
+            }
+#+END_SRC
+
+
 * Run Test Cases
- 
+** Initialization 
 #+BEGIN_SRC python :tangle ../../tests/test_obj.py :eval no
 if __name__ == '__main__':
     unittest.main()
 #+END_SRC
 
+** Setup
+
+#+BEGIN_SRC python :tangle ../../src/obj.py :eval no
+
+def setUp():
+    user = User(name = Name("abc"), email=Email("abc@gmail.com"),
+    role=Role(name=Name("admin")))
+    User.users.append(user)
+
+#+END_SRC
+
+** Teardown
+
+#+BEGIN_SRC python :tangle ../../src/obj.py :eval no
+def tearDown():
+    User.users = []
+    Session.sessions = []
+
+#+END_SRC
 
 
